--- a/chatsounds-preprocessor.cbp
+++ b/chatsounds-preprocessor.cbp
@@ -14,6 +14,10 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="lib\boost\debug\libboost_system-mgw47-mt-d-1_53.a" />
+					<Add library="lib\boost\debug\libboost_filesystem-mgw47-mt-d-1_53.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/chatsounds-preprocessor" prefix_auto="1" extension_auto="1" />
@@ -25,12 +29,15 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="lib\boost\release\libboost_system-mgw47-mt-1_53.a" />
+					<Add library="lib\boost\release\libboost_filesystem-mgw47-mt-1_53.a" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add directory="include" />
 		</Compiler>
 		<Unit filename="main.cpp" />
 		<Extensions>
