--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # CodeBlocks Noise
 chatsounds-preprocessor.layout
+chatsounds-preprocessor.depend
 
 # External Libraries / Header Files
 include/*
