--- a/chatsounds-preprocessor.cbp
+++ b/chatsounds-preprocessor.cbp
@@ -8,6 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/chatsounds-preprocessor" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="run" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -22,6 +23,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/chatsounds-preprocessor" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="run" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
