--- a/chatsounds-preprocessor.cbp
+++ b/chatsounds-preprocessor.cbp
@@ -28,7 +28,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-march=pentium4" />
+					<Add option="-march=prescott" />
 					<Add option="-O3" />
 				</Compiler>
 				<Linker>
