Added windows-related resources. * Added executable information. * Added executable icon.

--- a/chatsounds-preprocessor.cbp
+++ b/chatsounds-preprocessor.cbp
@@ -49,6 +49,10 @@
 			<Add library="lib\bass.lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
+		<Unit filename="res/windows-fileinfo.rc">
+			<Option compilerVar="WINDRES" />
+			<Option target="Release" />
+		</Unit>
 		<Unit filename="version.h" />
 		<Extensions>
 			<code_completion />
