Improve ffmpeg handling.

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,12 @@ chatsounds-preprocessor.depend
 # External Libraries / Header Files
 include/*
 lib/*
+libs/*
 
 # Build Folders
 obj
 bin
+build
 
 # Test Folder
 run
