Fix the libavformat include directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,7 +117,7 @@ if (NOT FFMPEG_INTERNAL)
 	find_package(FFMPEG REQUIRED)
 
 	if (NOT "${FFMPEG_INCLUDE_DIR_AVFORMAT}" STREQUAL "")
-		include_directories (${FFMPEG_INCLUDE_DIR_AVFORMAT})
+		include_directories ("${FFMPEG_INCLUDE_DIR_AVFORMAT}/..")
 	endif (NOT "${FFMPEG_INCLUDE_DIR_AVFORMAT}" STREQUAL "")
 endif (NOT FFMPEG_INTERNAL)
 
