--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,9 +106,25 @@ include_directories(${Boost_INCLUDE_DIRS})
 if (IS_DIRECTORY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/include")
 	if (IS_DIRECTORY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib")
 		include_directories ("${PROJECT_SOURCE_DIR}/libs/ffmpeg/include")
-		set (FFMPEG_avformat_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavformat.a")
-		set (FFMPEG_avcodec_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavcodec.a")
-		set (FFMPEG_avutil_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavutil.a")
+
+		# check if static libs exist
+		if ((EXISTS "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavformat.a")
+			AND (EXISTS "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavcodec.a")
+			AND (EXISTS "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavutil.a"))
+				message (STATUS "Using local static ffmpeg libs.")
+				set (FFMPEG_avformat_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavformat.a")
+				set (FFMPEG_avcodec_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavcodec.a")
+				set (FFMPEG_avutil_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavutil.a")
+		# check if dynamic libs exist
+		elseif ((EXISTS "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavformat.dll.a")
+			AND (EXISTS "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavcodec.dll.a")
+			AND (EXISTS "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavutil.dll.a"))
+			message (STATUS "Using local dynamic ffmpeg libs.")
+			set (FFMPEG_avformat_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavformat.dll.a")
+			set (FFMPEG_avcodec_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavcodec.dll.a")
+			set (FFMPEG_avutil_LIBRARY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib/libavutil.dll.a")
+		endif ()
+
 		set (FFMPEG_INTERNAL ON)
 	endif (IS_DIRECTORY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/lib")
 endif (IS_DIRECTORY "${PROJECT_SOURCE_DIR}/libs/ffmpeg/include")
