Try to improve stdc++fs detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,16 @@ endif (NOT FFMPEG_INTERNAL)
 
 find_package(CPPexperimental)
 
+if (NOT CPPEXPERIMENTAL_FOUND)
+	include(CheckCXXSymbolExists))
+	CHECK_CXX_SYMBOL_EXISTS(std::filesystem::path::preferred_separator filesystem cxx17fs)
+	if (NOT cxx17fs) # we're probably on GCC<8, add stdc++fs
+		SET(CPPEXPERIMENTAL_LIBRARIES "stdc++fs")
+	endif()
+	# this would probably be a cleaner way to achieve this:
+	# https://stackoverflow.com/a/54290906
+endif()
+
 if (WIN32)
 	set (BCRYPT_LIBRARY "BCrypt")
 endif()
