Fix syntax error in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,7 +142,7 @@ endif (NOT FFMPEG_INTERNAL)
 find_package(CPPexperimental)
 
 if (NOT CPPEXPERIMENTAL_FOUND)
-	include(CheckCXXSymbolExists))
+	include(CheckCXXSymbolExists)
 	CHECK_CXX_SYMBOL_EXISTS(std::filesystem::path::preferred_separator filesystem cxx17fs)
 	if (NOT cxx17fs) # we're probably on GCC<8, add stdc++fs
 		SET(CPPEXPERIMENTAL_LIBRARIES "stdc++fs")
